# nbdev-demo-2

./: README.md  core.html  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbdev_demo_2/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
